chore: updated openapi json files
